# workflow_swfool

./: .gitignore  README.md  pyproject.toml
audit-cycle-loopback/: SKILL.md  authority.operations.json
audit-session-governance/: SKILL.md  authority.operations.json
build-validation-set-with-agents/: SKILL.md  authority.operations.json
deep-interview-goal-context/: SKILL.md  authority.operations.json
derive-improvement-task/: SKILL.md  authority.operations.json
find-local-python-envs/: SKILL.md  authority.operations.json
inspect-oom-risk/: SKILL.md  authority.operations.json
inspect-repo-with-agents/: SKILL.md  authority.operations.json
install-deps-with-agent/: SKILL.md  authority.operations.json
maintain-cycle-ledger/: SKILL.md  authority.operations.json
manage-agent-authority/: SKILL.md  authority.operations.json
manage-agent-goal/: SKILL.md  authority.operations.json
manage-evidence-cache/: SKILL.md  authority.operations.json
manage-external-advice/: SKILL.md  authority.operations.json
manage-goal-architecture/: SKILL.md  authority.operations.json
manage-goal-theory/: SKILL.md  authority.operations.json
manage-implementation-issues/: SKILL.md  authority.operations.json
manage-schema-contracts/: SKILL.md  authority.operations.json
manage-task-state-index/: SKILL.md  authority.operations.json
monitor-running-execution/: SKILL.md  authority.operations.json
normalize-acceptance-and-demo/: SKILL.md  authority.operations.json
optimize-task-slice/: SKILL.md  authority.operations.json
orchestrate-task-cycle/: SKILL.md  (+1 more)
(+1372 files in other folders)
