[project]
name = "codex-governed-skills"
version = "0.1.0"
description = "Deterministic contracts and tests for the governed Codex skill workflow"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests", "orchestrate-task-cycle/scripts"]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"

