[project]
name = "codex-governed-skills"
version = "0.1.0"
description = "Deterministic contracts and tests for the governed Codex skill workflow"
requires-python = ">=3.10"

[project.optional-dependencies]
root-authorization = [
  "cryptography>=44",
]
test = [
  "cryptography>=44",
  "pytest",
  "PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests", "audit-cycle-loopback/tests"]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"
pythonpath = [
  "orchestrate-task-cycle/scripts",
  "audit-cycle-loopback/scripts",
  "record-agent-work-log/scripts",
  "manage-task-state-index/scripts",
  "manage-external-advice/scripts",
  "build-validation-set-with-agents/scripts",
  "plan-validation-scope/scripts",
  "audit-session-governance/scripts",
  "manage-agent-authority/scripts",
  "normalize-acceptance-and-demo/scripts",
  "find-local-python-envs/scripts",
  "run-task-code-and-log/scripts",
  "validate-task-completion/scripts",
]
